# BioDockify-pharma-research-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  1_test-backend.txt  5_Run Backend Tests.txt  AGENT_ZERO_WEB_RESEARCH_ARCHITECTURE.md  AGENT_ZERO_WEB_RESEARCH_IMPLEMENTATION_SUMMARY.md  API_FIX_SUMMARY.md  ARCHITECTURE.md  BUG_REPORT_CHAT_FUNCTIONALITY.md  BUG_REPORT_FRONTEND_UI.md  BUG_REPORT_LM_STUDIO_API_SETTINGS.md  BUILD_GUIDE.md  BUILD_STATUS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEBUGGING_REPORT.md  DEBUG_PLAN.md  DEPLOYMENT.md  DISCLAIMER.md  Dockerfile  Dockerfile.backend  ENHANCED_SELF_AWARENESS_SYSTEM.md  ETHICS_AND_LIMITATIONS.md  INSTALLATION.md  INTEGRATION_SUMMARY.md  METHODOLOGY.md  MODULE_FIXES_REQUIRED.md  MULTI_PROJECT_CAPABILITY.md  NSIS_FIX_SUMMARY.md  PROACTIVE_GUIDANCE_SYSTEM.md  QUICK_START_BUILD.md  README.md  README.txt  RELEASE_GUIDE.md  RELEASE_NOTES.md  RELEASE_NOTES.txt  RELEASE_NOTES_TEMP.md  (+71 more)
.a0proj/: project.json  secrets.env
_external/LatteReview/: .env_sample  .gitignore  CHANGELOG.md  README.md  collect_scripts.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
_external/LatteReview/.github/: FUNDING.yml
_external/LatteReview/docs/: about.md  index.md  installation.md  quickstart.md
_external/LatteReview/docs/api/: agents.md  providers.md  workflows.md
_external/LatteReview/evaluation/: custom_evaluation.ipynb  synergy_evaluation.ipynb
_external/LatteReview/evaluation/custom_data/: search1_reviewed.csv  search2_reviewed.csv  search3_reviewed.csv
_external/LatteReview/evaluation/synergy_data/: Donners_2021_reviewed.csv  Jeyaraman_2020_reviewed.csv  Meijboom_2021_reviewed.csv  Oud_2018_reviewed.csv
_external/LatteReview/lattereview/agents/: __init__.py  abstraction_reviewer.py  basic_reviewer.py  scoring_reviewer.py  title_abstract_reviewer.py
_external/LatteReview/lattereview/providers/: __init__.py  base_provider.py  google_provider.py  litellm_provider.py  ollama_provider.py  openai_provider.py
_external/LatteReview/lattereview/utils/: __init__.py  data_handler.py
_external/LatteReview/lattereview/workflows/: __init__.py  review_workflow.py
_external/LatteReview/tutorials/abstraction_review_literature_analysis/: abstraction_review_literature_analysis.ipynb  complications_graph.html  data.xlsx  formatted_complication_dict.pkl  reviewed_data.csv
_external/LatteReview/tutorials/abstraction_review_simple/: abstraction_review_sample.ipynb  data.csv
_external/LatteReview/tutorials/base_functionalities/: base_functionalities.ipynb
_external/LatteReview/tutorials/custom_reviewer/: abstraction_review_literature_analysis.ipynb  data.csv
_external/LatteReview/tutorials/review_ris_files/: data.ris  title_abstract_review.ipynb
_external/LatteReview/tutorials/scoring_review_image/: scoring_review_image.ipynb
_external/LatteReview/tutorials/scoring_review_image/data/: metadata.csv
_external/LatteReview/tutorials/scoring_review_rag/: data.csv  scoring_review_rag.ipynb
_external/LatteReview/tutorials/scoring_review_simple/: data.csv  scoring_review_simple.ipynb
_external/LatteReview/tutorials/title_abstract_review/: data.csv  title_abstract_review.ipynb
agent_zero/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  biodockify_ai.py  channels.py  enhanced.py  example_usage.py  nanobot_bridge.py  requirements.txt  requirements_pharma.txt.backup
agent_zero/skills/deep_drive/clef25/generative-authorship-verification/pan25_genai_evaluator/: pyproject.toml
api/: main.py  main.py.backup_duplicate_fix  main.py.backup_final_fix  requirements-dev.txt  requirements.txt  requirements_heavy.txt
config/: channels.json
data/: knowledge_graph.json  scheduler_state.json
db/: custom.db
deployment/: deploy.sh  monitoring_dashboard_setup.py
desktop/tauri/src-tauri/: Cargo.toml  installer_hooks.nsh  tauri.conf.json  tauri.conf.json.terabox.uploading.cfg
desktop/tauri/src-tauri/icons/: create_bmps.py  icon.icns
desktop/tauri/src-tauri/src/: main.rs
docs/: AGENT_ZERO_RULES.md  ANTIGRAVITY_RULES.md  USER_MANUAL.md
export/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  bibtex_manager.py  docx_academic.py  example_usage.py  latex_generator.py  requirements.txt
installer/: EULA.txt  setup.nsi  setup.nsi.terabox.uploading.cfg  setup_minimal.nsi
modules/: __init__.py  auto_research_orchestrator.py  faculty_materials.py  integrated_research_manager.py  (+6 more)
ui/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ui/desktop/src-tauri/src/: lib.rs  main.rs
(+781 files in other folders)
