[project]
name = "lattereview"
version = "1.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "build>=1.2.2.post1",
    "flake8>=7.1.1",
    "google>=3.0.0",
    "google-genai>=1.15.0",
    "ipykernel>=6.29.5",
    "litellm>=1.55.2",
    "matplotlib>=3.9.4",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.12",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
    "nest-asyncio>=1.6.0",
    "ollama>=0.4.4",
    "openai>=1.57.4",
    "opencv-python>=4.10.0.84",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pillow>=11.0.0",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "setuptools>=80.0.0",
    "tokencost>=0.1.17",
    "tqdm>=4.67.1",
    "twine>=6.1.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39']
