[package]
name = "biodockify"
version = "1.0.0"
description = "BioDockify AI - Pharmaceutical Research Platform"
authors = ["BioDockify Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["shell-open"] }
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = ["profile", "codegen"]
lto = true          # Enable link-time optimization
opt-level = "z"     # Optimize for size
strip = true         # Strip debug symbols
