[build-system]
requires = ["setuptools>=78.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pan25-genai-evaluator"
version = "1.0.0"
description = "Evaluator for the PAN'25 Generative AI Authorship verification shared task."
authors = [
  { name = "Janek Bevendorff" }
]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "tira>=0.0.160",
]

[project.urls]
repository = "https://github.com/pan-webis-de/pan-code/tree/master/clef25/generative-authorship-verification"
homepage = "https://pan.webis.de/clef25/pan25-web/generated-content-analysis.html"

[project.scripts]
pan25-evaluator = "pan25_genai_evaluator.evaluator:main"
